k8s/ingress/ingress-space.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: space-ingress
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - host: localhost
      http:
        paths:
          - path: /socialbeats-space(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: space-nginx
                port:
                  number: 5403
